--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "http-aws-es": "^6.0.0",
     "jimp": "^0.16.1",
     "source-map-support": "^0.5.11",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.28",
@@ -19,6 +20,7 @@
     "@types/http-aws-es": "^6.0.0",
     "@types/node": "^10.14.12",
     "@types/uuid": "^8.3.0",
+    "@types/jsonwebtoken": "^8.3.2",
     "aws-sdk": "^2.492.0",
     "serverless-aws-documentation": "^1.1.0",
     "serverless-reqvalidator-plugin": "^1.0.3",
