--- a/package.json
+++ b/package.json
@@ -7,20 +7,23 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@middy/core": "^2.0.0",
+    "@middy/http-cors": "^2.0.0",
+    "@middy/secrets-manager": "^2.0.0",
     "elasticsearch": "^15.5.0",
     "http-aws-es": "^6.0.0",
     "jimp": "^0.16.1",
+    "jsonwebtoken": "^8.5.1",
     "source-map-support": "^0.5.11",
-    "uuid": "^3.3.2",
-    "jsonwebtoken": "^8.5.1"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.28",
+    "@types/aws-lambda": "^8.10.73",
     "@types/elasticsearch": "^5.0.34",
     "@types/http-aws-es": "^6.0.0",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^10.14.12",
     "@types/uuid": "^8.3.0",
-    "@types/jsonwebtoken": "^8.3.2",
     "aws-sdk": "^2.492.0",
     "serverless-aws-documentation": "^1.1.0",
     "serverless-reqvalidator-plugin": "^1.0.3",
