Change jwt sign algo to asymmetric, add user id info for group create

--- a/serverless.yml
+++ b/serverless.yml
@@ -86,6 +86,9 @@ functions:
   Auth:
     handler: src/lambda/auth/auth0Authorizer.handler
 
+  Rs256:
+    handler: src/lambda/auth/rs256Auth0Authorizer.handler
+
   GetGroups:
     handler: src/lambda/http/getGroups.handler
     events:
@@ -101,7 +104,8 @@ functions:
           method: post
           path: groups
           cors: true
-          authorizer: Auth
+#          authorizer: Auth
+          authorizer: Rs256
           reqValidatorName: RequestBodyValidator
           documentation:
             summary: Create a new group
@@ -124,7 +128,8 @@ functions:
           method: post
           path: groups/{groupId}/images
           cors: true
-          authorizer: Auth
+#          authorizer: Auth
+          authorizer: Rs256
           reqValidatorName: RequestBodyValidator
           documentation:
             summary: Create a new image
