--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@types/node": "^10.14.12",
     "@types/uuid": "^8.3.0",
     "aws-sdk": "^2.492.0",
+    "serverless": "^2.33.1",
     "serverless-aws-documentation": "^1.1.0",
+    "serverless-dynamodb-local": "^0.2.39",
+    "serverless-offline": "^6.9.0",
     "serverless-reqvalidator-plugin": "^1.0.3",
     "serverless-webpack": "^5.3.1",
     "ts-loader": "^5.4.5",
