--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "source-map-support": "^0.5.11",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "aws-xray-sdk": "^2.3.3"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.73",
