--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "serverless": "^2.33.1",
     "serverless-aws-documentation": "^1.1.0",
     "serverless-dynamodb-local": "^0.2.39",
+    "serverless-iam-roles-per-function": "^3.1.0",
     "serverless-offline": "^6.9.0",
     "serverless-reqvalidator-plugin": "^1.0.3",
     "serverless-webpack": "^5.3.1",
