--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "@middy/core": "^2.0.0",
     "@middy/http-cors": "^2.0.0",
     "@middy/secrets-manager": "^2.0.0",
+    "aws-serverless-express": "^3.4.0",
+    "aws-xray-sdk": "^2.3.3",
     "elasticsearch": "^15.5.0",
+    "express": "^4.17.1",
     "http-aws-es": "^6.0.0",
     "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "source-map-support": "^0.5.11",
-    "uuid": "^3.3.2",
-    "aws-xray-sdk": "^2.3.3"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.73",
